--- a/src/components/OrgansList/OrganList.css
+++ b/src/components/OrgansList/OrganList.css
@@ -41,6 +41,7 @@
     border-left: none;
     border-radius: 1vw;
     background-color: white;
+    border-radius: 50%;
 }
 
 .image:hover {
@@ -48,8 +49,9 @@
 }
 
 img {
-    width: 10vw;
-    height: 20vh;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
     margin: 1vw;
 }
 
